fixed reviewers issues on scrollbar, search btn and all the rest

--- a/scss/_variables-resets.scss
+++ b/scss/_variables-resets.scss
@@ -33,8 +33,11 @@ $dark-color: #383838;
   padding: 0;
 }
 
-body {
+body,
+html {
   font-family: "goth-light", sans-serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
